# mechanistic-validity

./: .gitignore  BENCHMARK_SPEC.md  CHANGELOG.md  CHANGELOG_benchmark_infra.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: deploy.yml
docs/: ARTICLE_GUIDELINES.md  SYSTEM_OVERVIEW.md  astro.config.mjs  package-lock.json  package.json
docs/decisions/: 001_pydantic_v2.md  002_tracks_views_gates.md  003_track3_preregistered.md  004_role_ablation_metric.md  005_task_taxonomy.md  006_mixed_components.md  007_edge_level_circuits.md  008_ioi_calibration.md  009_views_as_aggregations.md  010_gates_as_preconditions.md  011_artifact_adapters.md  012_weave_shim.md  013_epistemic_claim_spec.md  014_analysis_scripts.md  015_proxy_circuit_validation.md  016_epistemic_expanded_spec.md  INDEX.md
docs/paper/UPDATED_PAPER_V4/: main.tex  references.bib  tmlr.sty
docs/scripts/: build-backlinks.mjs
docs/src/data/: backlinks.json
docs/src/styles/: custom.css
results/example_epistemic/: LAB_NOTEBOOK.md  RESULTS.md
results/example_epistemic/discovery/: epistemic_act_patch.json  epistemic_act_patch.py
results/example_epistemic/edge_analysis/: ioi_edge_necessity.json  ioi_path_identification.json  ioi_path_specificity.json
results/example_epistemic/pass1_initial/: 70_operation_specification.json  71_held_out_prediction.json  72_replacement_test.json  73_distributional_characterization.json  74_distributional_stability.json  75_probe_decodability.json  76_causal_representation.json  77_procedure_specification.json  78_composition_test.json  79_intermediate_state_prediction.json  80_normative_account.json  81_error_boundary_analysis.json
scripts/: agreement_transportability.py  cross_circuit_transportability.py  generate_figures.py  launch_runpod.py  marr_plotly.py  proxy_circuit_analysis.py  signal_plotly.py  spec_comparison.py  track3_coverage_report.py
skills/mechval/: SKILL.md
skills/mechval/references/: criteria-checklist.md  instruments-by-criteria.md
specs/: ioi_spec.json
src/instruments/: TODO.md  _common.py
src/lib/features/: __init__.py  directions.py  formula.py  heads.py  neurons.py
src/lib/tasks/: __init__.py  prompts.py
src/lib/utils/: catalog.py  citations.py
src/mechanistic_validity/: registry.py
src/mechanistic_validity/instruments/: common.py
src/mechanistic_validity/metrics/: common.py
src/mechval/: __init__.py  cli.py  config.py  gates.py  metric_registry.py  models.py  registry.py  spec.py  spec_verification.py  tracing.py  views.py
src/mechval/metrics/: common.py
src/mechval_v2/: common.py
src/mechval_v2/calibrations/: 11_bootstrap.py  12_convergent_validity.py  14_derived_metrics.py  36_incremental_validity.py  74_distributional_stability.py  93_multiple_comparisons.py  98_ablation_invariance.py  E1b_method_invariance.py
tests/: test_01_das_iia.py  test_02_activation_patching.py  test_03_sigma_ablation.py  test_04_causal_scrubbing.py  test_05_mediation.py  test_05_mediation_v2.py  test_06_cate.py  test_07_info_ocse.py  test_07_ocse.py  test_08_causal_pid.py  test_08_info_pid.py  test_09_causal_notears.py  test_09_info_notears.py  test_10_causal_llc.py  test_10_llc.py  test_11_bootstrap.py  test_12_convergent_validity.py  test_13_measurement_invariance.py  test_14_behavioral_derived_metrics.py  test_14_sensitivity_derived_metrics.py  test_15_iia_variants.py  test_16_internal_consistency.py  test_16_test_retest.py  test_17_discriminant_validity.py  test_18_effective_rank.py  test_18_mdc_weight_extended.py  test_18_spectral_svd.py  test_19_logic_gates.py  test_20_corrupt_restore.py  test_20_das_corrupt_restore.py  test_21_kl_divergence.py  test_21_logit_diff_output_variants.py  test_21_topk_accuracy.py  test_22_mean_centered_logit.py  test_23_nomological_validity.py  test_24_pse.py  test_25_intervention_specificity.py  test_26_cmd.py  test_27_edge_jaccard.py  test_28_weight_eap_jaccard.py  (+104 more)
(+1203 files in other folders)
