[project]
name = "mechval"
version = "0.1.0"
description = "A framework for evaluating the validity of mechanistic interpretability claims"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Elliot Tower", email = "elliot@elliottower.com" },
]
dependencies = [
    "torch>=2.2,<3",
    "numpy>=1.26,<2",
    "transformer-lens>=2.15",
    "sae-lens>=6.5",
    "einops>=0.8",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "plotly>=5.0",
    "pyvene>=0.1.8",
    "jaxtyping>=0.3",
    "fancy-einsum>=0.0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
causal = [
    "dowhy>=0.11",
    "econml>=0.15",
    "causal-learn>=0.1",
]
information = [
    "dit>=1.5",
    "pyinform>=0.2",
]
tda = [
    "ripser>=0.6",
    "persim>=0.3",
]
weave = [
    "wandb>=0.17",
    "weave>=0.51",
]
cli = [
    "cyclopts>=3.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
mechval = "mechval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mechval"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
override-dependencies = [
    "torch>=2.2,<2.5; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
